# pyTMD

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  Dockerfile  MANIFEST.in  Plot Antarctic Tidal Currents.ipynb  Plot Antarctic Tide Range.ipynb  Plot Ross Ice Shelf Map.ipynb  Plot Tide Forecasts.ipynb  README.md  README.rst  codecov.yml  compute_LPT_displacements.py  compute_LPT_icebridge_data.py  compute_OPT_displacements.py  compute_OPT_icebridge_data.py  compute_tidal_elevations.py  compute_tides_ICESat2_ATL03.py  compute_tides_ICESat2_ATL06.py  compute_tides_ICESat2_ATL07.py  compute_tides_ICESat2_ATL12.py  compute_tides_icebridge_data.py  environment.yml  plot_tide_forecasts.py  postBuild  pyproject.toml  pytest.ini  readthedocs.yml  reduce_OTIS_files.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  version.txt
doc/: environment.yml  requirements.txt
notebooks/: Check Tide Map.ipynb  Compare Tide Forecasts.ipynb  Plot ATLAS Compact.ipynb  Plot Antarctic Cotidal Charts.ipynb  Plot Antarctic Tidal Currents.ipynb  Plot Antarctic Tide Range.ipynb  Plot Arctic Ocean Map.ipynb  Plot Ocean Pole Tide Map.ipynb  Plot Ross Ice Shelf Map.ipynb  Plot Tide Forecasts.ipynb  SimpleScriptGetTideCurrentTimeseries.ipynb  SimpleScriptGetTideElevationTimeseries.ipynb  Solve Synthetic Tides.ipynb  data_Kartverket_NyAlesund_Juni_2023.txt
providers/: AVISO.json  ESR.json  GSFC.json  README.rst  TPXO.json  _model_to_database.py  _providers_to_database.py  _update_providers.py  providers.json
pyTMD/: __init__.py  arguments.py  astro.py  bilinear_interp.py  calc_astrol_longitudes.py  calc_delta_time.py  calc_iers_mean_pole.py  check_points.py  check_tide_points.py  compute.py  compute_equilibrium_tide.py  compute_tide_corrections.py  constants.py  constituents.py  convert_calendar_decimal.py  convert_crs.py  convert_julian.py  convert_ll_xy.py  convert_model_crs.py  convert_xy_ll.py  count_leap_seconds.py  crs.py  ellipse.py  eop.py  iers_mean_pole.py  infer_minor_corrections.py  interpolate.py  load_constituent.py  load_nodal_corrections.py  map_ll_tides.py  map_xy_tides.py  math.py  model.py  nearest_extrap.py  output_otis_tides.py  predict.py  predict_tidal_ts.py  predict_tide.py  predict_tide_drift.py  read_ATM1b_QFIT_binary.py  (+17 more)
scripts/: arcticdata_tides.py  aviso_fes_tides.py  compute_LPET_ICESat2_ATL03.py  compute_LPET_ICESat2_ATL06.py  compute_LPET_ICESat2_ATL07.py  compute_LPET_ICESat2_ATL10.py  compute_LPET_ICESat2_ATL11.py  compute_LPET_ICESat2_ATL12.py  compute_LPET_ICESat_GLA12.py  compute_LPET_elevations.py  compute_LPET_icebridge_data.py  compute_LPT_ICESat_GLA12.py  compute_LPT_displacements.py  compute_LPT_icebridge_data.py  compute_OPT_ICESat_GLA12.py  compute_OPT_displacements.py  compute_OPT_icebridge_data.py  compute_SET_displacements.py  compute_tidal_currents.py  gsfc_got_tides.py  (+14 more)
(+341 files in other folders)
