[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTMD"
description = "Tide Model Driver to read OTIS, ATLAS, GOT and FES formatted tidal solutions and make tidal predictions"
keywords = [
    "Ocean Tides",
    "Load Tides",
    "Pole Tides",
    "Solid Earth Tides",
    "Tidal Prediction",
]
authors = [
    {name = "Tyler Sutterley"},
    {name = "Karen Alley"},
    {name = "Kelly Brunt"},
    {name = "Susan Howard"},
    {name = "Laurie Padman"},
    {name = "Matt Siegfried"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [{ name = "pyTMD contributors" }]
license = {file = "LICENSE"}
readme = "README.rst"

requires-python = "~=3.6"
dependencies = [
    "lxml",
    "netCDF4",
    "numpy",
    "pyproj",
    "python-dateutil",
    "scipy>=1.10.1",
    "setuptools_scm",
    "timescale>=0.0.3",
]

dynamic = ["version"]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://pytmd.readthedocs.io"
Documentation = "https://pytmd.readthedocs.io"
Repository = "https://github.com/tsutterley/pyTMD"
Issues = "https://github.com/tsutterley/pyTMD/issues"

[project.optional-dependencies]
doc = ["docutils", "fontconfig", "freetype", "graphviz", "numpydoc", "sphinx", "sphinx-argparse>=0.4", "sphinx_rtd_theme"]
all = ["cartopy", "gdal", "h5py", "ipyleaflet", "ipywidgets", "jplephem", "matplotlib", "mpi4py", "notebook", "pandas", "pyyaml"]
dev = ["flake8", "pytest>=4.6", "pytest-cov", "oct2py", "boto3"]

[tool.setuptools.packages.find]
exclude = ["providers*", "run*", "test*"]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".git"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "pyTMD",
    "test",
]
omit = [
    "setup.py",
    "conf.py",
    "scripts/*",
    "pyTMD/calc_astrol_longitudes.py",
    "pyTMD/compute_tide_corrections.py",
    "pyTMD/convert_crs.py",
    "pyTMD/convert_ll_xy.py",
    "pyTMD/load_constituent.py",
    "pyTMD/load_nodal_corrections.py",
    "test/_def_to_json.py",
    "providers/_model_to_json.py",
    "providers/_providers_to_database.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
